@@ -10,6 +10,7 @@ Current:
   * New devices supported:
     - ATmega48P (patch #7629 add support for atmega48p)
     - AT90PWM316 (bug #21797: AT90PWM316: New part description)
+    - ATxmega16D4, ATxmega32D4, ATxmega64D4, ATxmega128D4
 
   * New programmers supported:
     - avrftdi
